@@ -158,7 +158,7 @@ subtest 'do nested scope rollback-commit' => sub {
 
     eval { $txn->commit };
 
-    like( $@, qr/tried to commit but alreay rollbacked in nested transaction./, "error message" );
+    like( $@, qr/tried to commit but already rollbacked in nested transaction./, "error message" );
 
     $txn->rollback;
 
@@ -210,7 +210,7 @@ subtest 'do nested scope rollback-commit-rollback' => sub {
         }
 
         eval { $txn2->commit };
-        like( $@, qr/tried to commit but alreay rollbacked in nested transaction./, "error message" );
+        like( $@, qr/tried to commit but already rollbacked in nested transaction./, "error message" );
     }
     my $row = Mock::Basic->insert('mock_basic',{
         name => 'perl5.12',
@@ -252,7 +252,7 @@ subtest 'do nested scope rollback-commit-commit' => sub {
     is $row->name, 'perl5.12';
 
     eval { $txn->commit };
-    like( $@, qr/tried to commit but alreay rollbacked in nested transaction./, "error message" );
+    like( $@, qr/tried to commit but already rollbacked in nested transaction./, "error message" );
     $txn->rollback;
 
     ok not +Mock::Basic->single('mock_basic',{id => 6});
