@@ -156,7 +156,7 @@ subtest 'do nested scope rollback-commit' => sub {
 
     eval { $txn->commit };
 
-    like( $@, qr/tried to commit but alreay rollbacked in nested transaction./, "error message" );
+    like( $@, qr/tried to commit but already rollbacked in nested transaction./, "error message" );
 
     $txn->rollback;
 
@@ -208,7 +208,7 @@ subtest 'do nested scope rollback-commit-rollback' => sub {
         }
 
         eval { $txn2->commit };
-        like( $@, qr/tried to commit but alreay rollbacked in nested transaction./, "error message" );
+        like( $@, qr/tried to commit but already rollbacked in nested transaction./, "error message" );
     }
     my $row = Mock::BasicPg->insert('mock_basic_pg',{
         name => 'perl5.12',
@@ -250,7 +250,7 @@ subtest 'do nested scope rollback-commit-commit' => sub {
     is $row->name, 'perl5.12';
 
     eval { $txn->commit };
-    like( $@, qr/tried to commit but alreay rollbacked in nested transaction./, "error message" );
+    like( $@, qr/tried to commit but already rollbacked in nested transaction./, "error message" );
     $txn->rollback;
 
     ok not +Mock::BasicPg->single('mock_basic_pg',{id => 18});
