@@ -5,6 +5,7 @@ Revision history for Perl extension DBIx::Skinny
         - MOD : support bind_param.
         - MOD : add replace method.
         - INCOMPATIBLE MOD: pre_insert and post_insert trigger should not work in bulk_insert. mysql driver does not effect this change. (walf443)
+        - fix typo s/alreay/already/ ( magicalhat++ )
 
 0.0709
    2010-04-20
